==> jjpark78/esp32_dwm3000_rtls_demo/decawave_api/deca_spi.cpp <==
/*! ----------------------------------------------------------------------------
 * @file    deca_spi.c
 * @brief   SPI access functions
 *
 * @attention
 *
 * Copyright 2015-2020 (c) DecaWave Ltd, Dublin, Ireland.
 *
 * All rights reserved.
 *
 * @author DecaWave
 */

#include "deca_spi.h"
#include "deca_device_api.h"
#include "esp32-hal-gpio.h"
#include <Arduino.h>
/* #include <port.h> */
/* #include <stm32f4xx_hal_def.h> */

/* extern  SPI_HandleTypeDef hspi1;    /\*clocked from 72MHz*\/ */

// Arduino Porting
#include <SPI.h>

extern SPIClass DWM_SPI;

/****************************************************************************/ /**
                                                                                *
                                                                                *                              DW1000 SPI section
                                                                                *
                                                                                *******************************************************************************/
/*!
 * ------------------------------------------------------------------------------------------------------------------
 * Function: openspi()
 *
 * Low level abstract function to open and initialise access to the SPI device.
 * returns 0 for success, or -1 for error
 */
int openspi(/*SPI_TypeDef* SPIx*/) { return 0; } // end openspi()

/*!
 * ------------------------------------------------------------------------------------------------------------------
 * Function: closespi()
 *
 * Low level abstract function to close the the SPI device.
 * returns 0 for success, or -1 for error
 */
int closespi(void) { return 0; } // end closespi()

/*!
 * ------------------------------------------------------------------------------------------------------------------
 * Function: writetospiwithcrc()
 *
 * Low level abstract function to write to the SPI when SPI CRC mode is used
 * Takes two separate byte buffers for write header and write data, and a CRC8
 * byte which is written last returns 0 for success, or -1 for error
 */
int writetospiwithcrc(uint16_t headerLength, const uint8_t *headerBuffer,
                      uint16_t bodyLength, const uint8_t *bodyBuffer,
                      uint8_t crc8) {
  Serial.println("called writetospiwithcrc");
  Serial.printf("  header length: %d\n", headerLength);
  Serial.printf("  header body: ");
  for (int i = 0; i < headerLength; i++) {
    Serial.printf("%x ", headerBuffer[i]);
  }
  Serial.println("");

  Serial.printf("  body length: %d\n", headerLength);
  Serial.printf("  body body: ");
  for (int i = 0; i < bodyLength; i++) {
    Serial.printf("%x ", bodyBuffer[i]);
  }
  Serial.println("");
  Serial.printf("  crc: %d\n", crc8);

  decaIrqStatus_t stat;
  stat = decamutexon();
  DWM_SPI.beginTransaction(SPISettings(1000000, MSBFIRST, SPI_MODE0));
  DWM_SPI.writeBytes(headerBuffer, headerLength);
  if (bodyLength > 0) {
    DWM_SPI.writeBytes(bodyBuffer, bodyLength);
  }
  DWM_SPI.write(crc8);
  DWM_SPI.endTransaction();

  /* while (HAL_SPI_GetState(&hspi1) != HAL_SPI_STATE_READY); */

  /* HAL_GPIO_WritePin(DW_NSS_GPIO_Port, DW_NSS_Pin, GPIO_PIN_RESET); /\**< Put
   * chip select line low *\/ */

  /* HAL_SPI_Transmit(&hspi1, (uint8_t *)headerBuffer, headerLength, 10);    /\*
   * Send header in polling mode *\/ */
  /* HAL_SPI_Transmit(&hspi1, (uint8_t *)bodyBuffer, bodyLength, 10);        /\*
   * Send data in polling mode *\/ */
  /* HAL_SPI_Transmit(&hspi1, (uint8_t *)&crc8, 1, 10);      /\* Send data in
   * polling mode *\/ */

  /* HAL_GPIO_WritePin(DW_NSS_GPIO_Port, DW_NSS_Pin, GPIO_PIN_SET); /\**< Put
   * chip select line high *\/ */
  decamutexoff(stat);
  return 0;
} // end writetospiwithcrc()

/*!
 * ------------------------------------------------------------------------------------------------------------------
 * Function: writetospi()
 *
 * Low level abstract function to write to the SPI
 * Takes two separate byte buffers for write header and write data
 * returns 0 for success, or -1 for error
 */
int writetospi(uint16_t headerLength, const uint8_t *headerBuffer,
               uint16_t bodyLength, const uint8_t *bodyBuffer) {
  decaIrqStatus_t stat;
  stat = decamutexon();

  DWM_SPI.beginTransaction(SPISettings(38000000L, MSBFIRST, SPI_MODE0));
  digitalWrite(5, LOW);
  DWM_SPI.writeBytes(headerBuffer, headerLength);
  if (bodyLength > 0) {
    DWM_SPI.writeBytes(bodyBuffer, bodyLength);
  }
  digitalWrite(5, HIGH);
  DWM_SPI.endTransaction();
  decamutexoff(stat);
  return 0;
} // end writetospi()

/*!
 * ------------------------------------------------------------------------------------------------------------------
 * @fn spi_cs_low_delay()
 *
 * @brief This function sets the CS to '0' for ms delay and than raises it up
 *
 * input parameters:
 * @param ms_delay - The delay for CS to be in '0' state
 *
 * no return value
 */
uint16_t spi_cs_low_delay(uint16_t delay_ms) {
  /* Blocking: Check whether previous transfer has been finished */
  /* while (HAL_SPI_GetState(&hspi1) != HAL_SPI_STATE_READY); */
  /* /\* Process Locked *\/ */
  /* __HAL_LOCK(&hspi1); */
  /* HAL_GPIO_WritePin(DW_NSS_GPIO_Port, DW_NSS_Pin, GPIO_PIN_RESET); /\**< Put
   * chip select line low *\/ */
  /* Sleep(delay_ms); */
  /* HAL_GPIO_WritePin(DW_NSS_GPIO_Port, DW_NSS_Pin, GPIO_PIN_SET); /\**< Put
   * chip select line high *\/ */
  /* /\* Process Unlocked *\/ */
  /* __HAL_UNLOCK(&hspi1); */

  return 0;
}

/*!
 * ------------------------------------------------------------------------------------------------------------------
 * Function: readfromspi()
 *
 * Low level abstract function to read from the SPI
 * Takes two separate byte buffers for write header and read data
 * returns the offset into read buffer where first byte of read data may be
 * found, or returns -1 if there was an error
 */
//#pragma GCC optimize ("O3")
int readfromspi(uint16_t headerLength, uint8_t *headerBuffer,
                uint16_t readLength, uint8_t *readBuffer) {
  decaIrqStatus_t stat;
  stat = decamutexon();
  DWM_SPI.beginTransaction(SPISettings(10000000, MSBFIRST, SPI_MODE0));
  digitalWrite(SS, LOW);
  for (auto i = 0; i < headerLength; i++) {
    DWM_SPI.write(headerBuffer[i]);
  }
  delay(5);
  DWM_SPI.transferBytes(NULL, readBuffer, readLength);
  digitalWrite(SS, HIGH);
  DWM_SPI.endTransaction();
  decamutexoff(stat);
  return 0;
} // end readfromspi()

/****************************************************************************/ /**
                                                                                *
                                                                                *                              END OF DW1000 SPI section
                                                                                *
                                                                                *******************************************************************************/
